--- a/chooser/package.json
+++ b/chooser/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@creativecommons/vocabulary-components": "^0.3.0",
+    "@sentry/vue": "^7.29.0",
     "clipboard": "^2.0.11",
     "sass": "^1.57.1",
     "vue": "^3.2.45",
