--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   },
   "dependencies": {
     "@creativecommons/vocabulary-components": "^0.3.0",
+    "@creativecommons/vocabulary-styles": "^0.3.0",
+    "@fortawesome/vue-fontawesome": "^2.0.9",
     "@sentry/vue": "^7.29.0",
     "clipboard": "^2.0.11",
     "sass": "^1.57.1",
