--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "core-js": "^3.20.3",
     "sass": "^1.45.1",
     "sass-loader": "^8.0.2",
-    "vue": "^2.6.14",
+    "vue": "^2.7.0",
     "vue-i18n": "^8.27.0",
     "vue-scrollto": "^2.20.0",
     "vuex": "^3.6.2"
@@ -55,17 +55,17 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.5",
     "@fullhuman/postcss-purgecss": "^3.1.3",
-    "@vue/cli-plugin-babel": "^4.4.6",
-    "@vue/cli-plugin-e2e-nightwatch": "^4.4.6",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-unit-jest": "^4.4.6",
-    "@vue/cli-service": "^4.4.6",
-    "@vue/eslint-config-standard": "^5.1.2",
+    "@vue/cli-plugin-babel": "^5.0.8",
+    "@vue/cli-plugin-e2e-nightwatch": "^5.0.8",
+    "@vue/cli-plugin-eslint": "^5.0.8",
+    "@vue/cli-plugin-unit-jest": "^5.0.8",
+    "@vue/cli-service": "^5.0.8",
+    "@vue/eslint-config-standard": "^8.0.1",
     "@vue/test-utils": "^1.1.2",
     "babel-plugin-transform-require-context": "^0.1.1",
     "clipboardy": "^2.3.0",
     "cypress": "^6.3.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.12.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-cypress": "^2.11.2",
     "eslint-plugin-import": "^2.22.0",
@@ -73,15 +73,15 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint-plugin-vue": "^9.0.0",
     "lint-staged": "^9.5.0",
-    "live-server": "^1.2.1",
+    "live-server": "^1.1.0",
     "prettier": "^2.5.1",
     "shx": "^0.3.3",
     "stylelint": "^13.10.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^20.0.0",
-    "vue-cli-plugin-i18n": "^2.3.1",
+    "vue-cli-plugin-i18n": "^0.6.1",
     "vue-template-compiler": "^2.6.14"
   },
   "gitHooks": {
